# BabelDOCMOD

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.yaml
.github/PULL_REQUEST_TEMPLATE/: pr_form.yml
.github/workflows/: codeql.yml  docs.yml  labeler.yml  pr-lint.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  test.yml  test3.10.yml  test3.11.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
CONTRIBUTOR_REWARD/: index.html
ImplementationDetails/: index.html
ImplementationDetails/AsyncTranslate/AsyncTranslate/: index.html
ImplementationDetails/ILTranslator/ILTranslator/: index.html
ImplementationDetails/PDFCreation/PDFCreation/: index.html
ImplementationDetails/PDFParsing/PDFParsing/: index.html
ImplementationDetails/ParagraphFinding/ParagraphFinding/: index.html
ImplementationDetails/StylesAndFormulas/StylesAndFormulas/: index.html
ImplementationDetails/Typesetting/Typesetting/: index.html
babeldoc/: __init__.py  const.py  converter.py  high_level.py  main.py  pdfinterp.py  progress_monitor.py  result_merger.py  split_manager.py  translation_config.py
babeldoc/assets/: assets.py  embedding_assets_metadata.py
babeldoc/asynchronize/: __init__.py
babeldoc/document_il/: __init__.py  il_version_1.py  il_version_1.rnc  il_version_1.rng  il_version_1.xsd
babeldoc/document_il/babeldoc_exception/: BabelDOCException.py
babeldoc/document_il/backend/: pdf_creater.py
babeldoc/document_il/frontend/: il_creater.py
babeldoc/document_il/midend/: add_debug_information.py  detect_scanned_file.py  il_translator.py  il_translator_llm_only.py  layout_parser.py  paragraph_finder.py  remove_descent.py  styles_and_formulas.py  table_parser.py  typesetting.py
babeldoc/document_il/translator/: cache.py  translator.py
babeldoc/document_il/utils/: fontmap.py  layout_helper.py  mupdf_helper.py  paragraph_helper.py  priority_thread_pool_executor.py  style_helper.py  zstd_helper.py
babeldoc/docvision/: doclayout.py  rpc_doclayout.py
babeldoc/docvision/table_detection/: rapidocr.py
babeldoc/tools/: generate_font_metadata.py  italic_assistance.py  italic_recognize_tool.py  italic_recogonize_tool.py
docs/: CONTRIBUTING.md  CONTRIBUTOR_REWARD.md  README.md  conf.py  deploy.sh  dpml.rng  index.md  index.rst  intro-to-pdf-object.md  requirements.txt  simplewpml.v1.rng  supported_languages.md
docs/ImplementationDetails/: README.md  index.md
docs/ImplementationDetails/AsyncTranslate/: AsyncTranslate.md
docs/ImplementationDetails/ILTranslator/: ILTranslator.md
docs/ImplementationDetails/PDFCreation/: PDFCreation.md
docs/ImplementationDetails/PDFParsing/: PDFParsing.md
docs/ImplementationDetails/ParagraphFinding/: ParagraphFinding.md
docs/ImplementationDetails/StylesAndFormulas/: StylesAndFormulas.md
docs/ImplementationDetails/Typesetting/: Typesetting.md
examples/: basic.xml  code-figure.xml  complex.xml  formular.xml  table.xml
examples/pdf/il_try_1/: 测试解析.xml
intro-to-pdf-object/: index.html
search/: search_index.json
specs/: base.xml  simple.xml
src/cbinding/: pqdf.cc
src/yadt/: __init__.py
src/yadt/il_try_1/: converter.py  demo.xml  doclayout.py  il_try_1.rnc  il_try_1.rng  il_try_1.xsd  main.py  pdfinterp.py
src/yadt/il_try_1/document_il/: ILCreater.py  PDFCreater.py  XMLConverter.py  __init__.py  il_try_1.py  xml_converter.py
src/yadt/il_try_1/document_il/backend/: pdf_creater.py
src/yadt/il_try_1/document_il/frontend/: il_creater.py
src/yadt/il_try_1/document_il/midend/: il_translator.py  paragraph_finder.py  typesetting.py
src/yadt/il_try_1/document_il/translator/: cache.py  translator.py
src/yadt/parsers/: reference.py
src/yadt/parsers/miner/: convert.py  interp.py  paser.py
src/yadt/qpdf/: __init__.py
tests/: test_translation_config.py
web/: index.html  package.json
web/src/: App.jsx
web/src/style/: App.css
web/src/utils/: detect.js  labels.json  renderBox.js
yadt/: __init__.py  const.py  converter.py  doclayout.py  high_level.py  il_version_1.rnc  il_version_1.rng  main.py  pdfinterp.py  pipeline.py  progress_monitor.py  translation_config.py
yadt/asynchronize/: __init__.py
yadt/document_il/: __init__.py  il_version_1.py  il_version_1.rnc  il_version_1.rng  il_version_1.xsd  xml_converter.py
yadt/document_il/backend/: pdf_creater.py
yadt/document_il/frontend/: il_creater.py
yadt/document_il/midend/: add_debug_information.py  il_translator.py  layout_parser.py  paragraph_finder.py  remove_descent.py  styles_and_formulas.py  typesetting.py  typesetting2.py
yadt/document_il/translator/: cache.py  translator.py
yadt/document_il/utils/: fontmap.py  layout_helper.py  style_helper.py
yadt/docvision/: doclayout.py  rpc_doclayout.py
