[project]
name = "yadt"
version = "0.1.2"
description = "Yet Another Document Translator"
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["PDF"]
dependencies = [
    "bitstring>=4.3.0",
    "configargparse>=1.7",
    "httpx>=0.27.0",
    "huggingface-hub>=0.27.0",
    "numpy>=2.0.2",
    "onnx>=1.17.0",
    "onnxruntime>=1.16.1",
    "openai>=1.59.3",
    "opencv-python>=4.10.0.84",
    "orjson>=3.10.14",
    "pdfminer-six>=20240706",
    "peewee>=3.17.8",
    "pymupdf>=1.25.1",
    "rich>=13.9.4",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "xsdata[cli,lxml,soap]>=24.12",
    "msgpack>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/funstory-ai/yadt"
Issues = "https://github.com/funstory-ai/yadt/issues"

[project.scripts]
yadt = "yadt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flake8]
ignore = ["E203", "E261", "E501", "W503", "E741"]
max-line-length = 88

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "black>=24.10.0",
    "bumpver>=2024.1130",
    "flake8>=7.1.1",
    "pep8-naming>=0.14.1",
]

[bumpver]
current_version = "0.1.2"
version_pattern = "MAJOR.MINOR.PATCH[.PYTAGNUM]"

[bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"yadt/__init__.py" = [
    '__version__ = "{version}"'
]
"yadt/main.py" = [
    '__version__ = "{version}"'
]
