[project]
name = "yadt"
version = "0.1.5"
description = "Yet Another Document Translator"
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["PDF"]
dependencies = [
    "bitstring>=4.3.0",
    "configargparse>=1.7",
    "httpx>=0.27.0",
    "huggingface-hub>=0.27.0",
    "numpy>=2.0.2",
    "onnx>=1.17.0",
    "onnxruntime>=1.16.1",
    "openai>=1.59.3",
    "opencv-python>=4.10.0.84",
    "orjson>=3.10.14",
    "pdfminer-six>=20240706",
    "peewee>=3.17.8",
    "pymupdf>=1.25.1",
    "rich>=13.9.4",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "xsdata[cli,lxml,soap]>=24.12",
    "msgpack>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/funstory-ai/yadt"
Issues = "https://github.com/funstory-ai/yadt/issues"

[project.scripts]
yadt = "yadt.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flake8]
ignore = ["E203", "E261", "E501", "W503", "E741", "E501"]
max-line-length = 88

[tool.ruff]

src=["yadt"]
target-version = "py310"
show-fixes = true

lint.ignore = ["E203", "E261", "E501", "E741", "F841"]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "bumpver>=2024.1130",
    "pre-commit>=4.1.0",
    "ruff>=0.9.2",
]

[bumpver]
current_version = "0.1.5"
version_pattern = "MAJOR.MINOR.PATCH[.PYTAGNUM]"

[bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"yadt/__init__.py" = [
    '__version__ = "{version}"'
]
"yadt/main.py" = [
    '__version__ = "{version}"'
]
